fix: Using same rules for .color-theme-2 (gitbook dark mode) as for .quarto-dark.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/exams@2742 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/exams2forms/inst/webex/webex.css
+++ b/pkg/exams2forms/inst/webex/webex.css
@@ -11,13 +11,14 @@
   --text_input: black;
 }
 
-/* for quarto websites when using dark theme */
-:root .quarto-dark {
+/* for quarto websites when using dark theme and
+ * for bookdown::gitbook: dark theme (.color-theme-2) */
+:root .quarto-dark, :root .color-theme-2 {
   --highlight: #5687B9;
   --background_input: black;
   --text_input: white;
 }
-/* Wishlist: Adding a default 'dark' behavior for bookdown pages */
+/* Wishlist: Adding styling for .color-theme-1 (sepia; gitbook) */
 
 /*---------------------ADDED-----------------------------*/
 
